2005-01-01  Christopher Faylor  <cgf@timesys.com>

	* shared.cc (open_shared): Don't attempt VirtualAlloc magic if first
	attempt to map memory fails.

2004-12-30  Christopher Faylor  <cgf@timesys.com>

	* devices.cc (device::isfs): Return true for the logical case of
	devn == FH_FS.

2004-12-28  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::dup_proc_pipe): DUPLICATE_CLOSE_SOURCE closes the
	handle regardless, so revert previous change.

2004-12-27  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::stub): Add better debug output.
	(cygthread::cygthread): Ditto.
	(cygthread::terminate_thread): Ditto.  Move inuse test earlier or
	suffer infinite loop.
	* pinfo.cc (_pinfo::dup_proc_pipe): Close handle if DuplicateHandle
	fails and process no longer exists.
	* spawn.cc (spawn_guts): Create process in suspended state if OS
	demands it.
	* wincap.cc: Add "start_proc_suspended" throughout.
	* wincap.h (wincaps): Ditto.
	(wincapc): Ditto.

2004-12-27  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::exit): Beef up debugging output.
	* sigproc.cc (proc_subproc): Detached children apparently need a ppid
	of 1.

2004-12-26  Christopher Faylor  <cgf@timesys.com>

	* init.cc (dll_entry): Previous code reversion was ill-advised.  Revert
	it.
	* sigproc.cc (child_info::sync): Ditto.
	* pinfo.cc (_pinfo::exit): Don't set myself.procinfo to NULL since it
	is no longer required.

2004-12-26  Christopher Faylor  <cgf@timesys.com>

	* init.cc (dll_entry): Remove exit code setting.
	* pinfo.cc (pinfo::init): Initialize exitcode to unset state rather
	than SIGTERM.
	(proc_waiter): Detect if exit code is unset and use status from
	GetExitCodeProcess.
	* sigproc.cc (child_info::sync): Remove exit code detection here since
	proc_waiter now (again) detects it.

2004-12-25  Christopher Faylor  <cgf@timesys.com>

	* fhandler.cc (fhandler_base::fchmod): Do the right thing when changing
	an "on disk" device or fifo.